272 - Fix WorkflowFileStorageFacade initialization